Add select input component

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                         <script defer type="text/javascript" src="components/checkbox/checkbox.js"></script>
     <!-- file input --> <link rel="stylesheet" type="text/css" href="components/file-input/file-input.css">
                         <script defer type="text/javascript" src="components/file-input/file-input.js"></script>
+    <!-- file input --> <link rel="stylesheet" type="text/css" href="components/select-input/select-input.css">
+                        <script defer type="text/javascript" src="components/select-input/select-input.js"></script>
 
     <script defer type="text/javascript" src="scripts/init.js"></script>
 </head>
@@ -78,6 +80,9 @@
         <div class="tabs">
             <div id="tab0" class="tab active">
                 <div class="bv bv0 disabled">
+                    <div class="select-input" id="bv-category"></div>
+                    <div class="select-input" id="bv-difficulty"></div>
+
                     <div class="file-input" id="bv-album-art"></div>
                     <div class="file-input" id="bv-audio-clips"></div>
 
