Begin implementing difficulty ratings

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </div>
     
                         <div class="category">
-                            Track Data
+                            <div class="text-input" id="bv-difficultyRating"></div>
                         </div>
     
                         <div class="category">
