skeleton for number input boxes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                         <script defer type="text/javascript" src="components/dropdown/dropdown.js"></script>
     <!-- text input --> <link rel="stylesheet" type="text/css" href="components/text-input/text-input.css">
                         <script defer type="text/javascript" src="components/text-input/text-input.js"></script>
+    <!-- num input -->  <link rel="stylesheet" type="text/css" href="components/number-input/number-input.css">
+                        <script defer type="text/javascript" src="components/number-input/number-input.js"></script>
     <!-- checkbox -->   <link rel="stylesheet" type="text/css" href="components/checkbox/checkbox.css">
                         <script defer type="text/javascript" src="components/checkbox/checkbox.js"></script>
     <!-- file input --> <link rel="stylesheet" type="text/css" href="components/file-input/file-input.css">
@@ -94,10 +96,16 @@
                             <div class="text-input" id="bv-featArtists"></div>
                             <div class="text-input" id="bv-charter"></div>
                             <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
+                            <div class="number-input" id="bv-difficultyRating-0"></div>
+                            <div class="number-input" id="bv-difficultyRating-1"></div>
+                            <div class="number-input" id="bv-difficultyRating-2"></div>
+                            <div class="number-input" id="bv-difficultyRating-3"></div>
+                            <div class="number-input" id="bv-difficultyRating-4"></div>
+                            <div class="number-input" id="bv-difficultyRating-5"></div>
                         </div>
     
                         <div class="category">
-                            <div class="text-input" id="bv-difficultyRating"></div>
+                            <!-- <div class="text-input" id="bv-difficultyRating"></div> -->
                         </div>
     
                         <div class="category">
