improved text input fields

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                             <div class="text-input" id="bv-featArtists"></div>
                             <div class="text-input" id="bv-charter"></div>
                             <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
+                            <div style="font-size:1.75em"> </br></br>scuffed temporary difficulty rating boxes </div>
                             <div class="number-input" id="bv-difficultyRating-0"></div>
                             <div class="number-input" id="bv-difficultyRating-1"></div>
                             <div class="number-input" id="bv-difficultyRating-2"></div>
