various fixes and changes to difficulty boxes
refactored a lot of css
removed some css and html (for now)
shuffled a lot of basic view components and logic
added a skip to the hardcoded XD approach to diagnostics (if needed)
hard coded difficulties into their boxes

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <div class="tabs">
             <div id="tab0" class="tab active">
                 <div class="bv bv0 disabled">
-                    <div>
+                    <!-- <div>
                         <div class="select-input" id="bv-category"></div>
                         <div class="select-input disabled" id="bv-difficulty"></div>
-                    </div>
+                    </div> -->
 
                     <div id="bv-categories">
                         <div class="category active">
@@ -96,17 +96,10 @@
                             <div class="text-input" id="bv-featArtists"></div>
                             <div class="text-input" id="bv-charter"></div>
                             <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
-                            <div style="font-size:1.75em"> </br></br>scuffed temporary difficulty rating boxes </div>
-                            <div class="number-input" id="bv-difficultyRating-0"></div>
-                            <div class="number-input" id="bv-difficultyRating-1"></div>
-                            <div class="number-input" id="bv-difficultyRating-2"></div>
-                            <div class="number-input" id="bv-difficultyRating-3"></div>
-                            <div class="number-input" id="bv-difficultyRating-4"></div>
-                            <div class="number-input" id="bv-difficultyRating-5"></div>
                         </div>
-    
+
                         <div class="category">
-                            <!-- <div class="text-input" id="bv-difficultyRating"></div> -->
+                            stuff
                         </div>
     
                         <div class="category">
@@ -122,8 +115,21 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="bv bv1 disabled">
+                    <div id="bv-diffs">
+                        <div class="category active">
+                            <div style="font-size:1.75em"> scuffed temporary difficulty rating boxes </div>
+                            <div class="number-input" id="bv-difficultyRating-0"></div>
+                            <div class="number-input" id="bv-difficultyRating-1"></div>
+                            <div class="number-input" id="bv-difficultyRating-2"></div>
+                            <div class="number-input" id="bv-difficultyRating-3"></div>
+                            <div class="number-input" id="bv-difficultyRating-4"></div>
+                            <div class="number-input" id="bv-difficultyRating-5"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bv bv2 disabled">
                     <img id="bv-album-art-image" src="assets/images/Default_-_Cover.png">
                     <audio id="bv-audio-clips-audio" src="assets/audio/Get Good.ogg" controls></audio>
                 </div>
