--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                     </div> -->
 
                     <div id="bv-categories">
-                        <div class="category active">
-                            <div class="file-input" id="bv-album-art"></div>    
+                        <div class="category active">  
                             <div class="text-input" id="bv-title"></div>
                             <div class="text-input" id="bv-subtitle"></div>
                             <div class="text-input" id="bv-artistName"></div>
                             <div class="text-input" id="bv-featArtists"></div>
                             <div class="text-input" id="bv-charter"></div>
+                            <div class="file-input" id="bv-album-art"></div>  
                             <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
                         </div>
 
@@ -118,7 +118,7 @@
                 <div class="bv bv1 disabled">
                     <div id="bv-diffs">
                         <div class="category active">
-                            <div style="font-size:1.75em"> scuffed temporary difficulty rating boxes </div>
+                            <div style="font-size:1.75em"> Difficulty Ratings </div>
                             <div class="number-input" id="bv-difficultyRating-0"></div>
                             <div class="number-input" id="bv-difficultyRating-1"></div>
                             <div class="number-input" id="bv-difficultyRating-2"></div>
