--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="dv disabled">
                     <div class="text-input" id="dv-summary"></div>
                     <br>
-                    <div id="dv-max-score"></div>
+                    <!-- <div id="dv-max-score"></div>
                     <div id="dv-max-combo"></div>
                     <br>
                     <div id="dv-match-count"></div>
@@ -165,7 +165,13 @@
                     <div id="dv-scratch-count"></div>
                     <br>
                     <div id="dv-colors"></div>
-                    <div id="dv-movement"></div>
+                    <div id="dv-movement"></div> -->
+                    <div id="dv-0"></div>
+                    <div id="dv-1"></div>
+                    <div id="dv-2"></div>
+                    <div id="dv-3"></div>
+                    <div id="dv-4"></div>
+                    <div id="dv-5"></div>
                 </div>
             </div>
         </div>
