--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="styles/basic-view.css">
     <link rel="stylesheet" type="text/css" href="styles/json-view.css">
     <link rel="stylesheet" type="text/css" href="styles/bottom-bar.css">
+    <link rel="stylesheet" type="text/css" href="styles/diagnostics-view.css">
 
     <!-- - - - MAIN SCRIPTS - - - - - -->
     <script defer type="text/javascript" src="scripts/main.js"></script>
@@ -153,25 +154,7 @@
                 <div class="dv disabled">
                     <div class="text-input" id="dv-summary"></div>
                     <br>
-                    <!-- <div id="dv-max-score"></div>
-                    <div id="dv-max-combo"></div>
-                    <br>
-                    <div id="dv-match-count"></div>
-                    <div id="dv-tap-count"></div>
-                    <div id="dv-beat-count"></div>
-                    <div id="dv-hold-count"></div>
-                    <div id="dv-release-count"></div>
-                    <div id="dv-spin-count"></div>
-                    <div id="dv-scratch-count"></div>
-                    <br>
-                    <div id="dv-colors"></div>
-                    <div id="dv-movement"></div> -->
-                    <div id="dv-0"></div>
-                    <div id="dv-1"></div>
-                    <div id="dv-2"></div>
-                    <div id="dv-3"></div>
-                    <div id="dv-4"></div>
-                    <div id="dv-5"></div>
+                    <div id="dv-root" class="dv"></div>
                 </div>
             </div>
         </div>
