cleanup accidental em instead of rem

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="bv bv1 disabled">
                     <div id="bv-diffs">
                         <div class="category active">
-                            <div style="font-size:1.75em"> Difficulty Ratings </div>
+                            <div style="font-size:1.75rem"> Difficulty Ratings </div>
                             <div class="number-input" id="bv-difficultyRating-0"></div>
                             <div class="number-input" id="bv-difficultyRating-1"></div>
                             <div class="number-input" id="bv-difficultyRating-2"></div>
