--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
             <button onclick="switchToTab(1)" id="tab-button1" class="tab-button">Raw JSON View</button>
             <button onclick="switchToTab(2)" id="tab-button2" class="tab-button">Chart Diagnostics</button>
         </div>
+        <div class="tab-buttons-small">
+            <button onclick="switchToTab(0)" id="tab-button-small0" class="tab-button active">BV</button>
+            <button onclick="switchToTab(1)" id="tab-button-small1" class="tab-button">JSON</button>
+            <button onclick="switchToTab(2)" id="tab-button-small2" class="tab-button">Data</button>
+        </div>
         <div class="tabs">
             <div id="tab0" class="tab active">
                 <div class="bv bv0 disabled">
