functional difficulty toggles, wrong name fixes

--- a/index.html
+++ b/index.html
@@ -125,12 +125,18 @@
                     <div id="bv-diffs">
                         <div class="category active">
                             <div style="font-size:1.75rem"> Difficulty Ratings </div>
-                            <div class="number-input" id="bv-difficultyRating-0"></div>
-                            <div class="number-input" id="bv-difficultyRating-1"></div>
-                            <div class="number-input" id="bv-difficultyRating-2"></div>
-                            <div class="number-input" id="bv-difficultyRating-3"></div>
-                            <div class="number-input" id="bv-difficultyRating-4"></div>
-                            <div class="number-input" id="bv-difficultyRating-5"></div>
+                            <div class="number-input" id="bv-difficultyRating0"></div>
+                            <div class="number-input" id="bv-difficultyRating1"></div>
+                            <div class="number-input" id="bv-difficultyRating2"></div>
+                            <div class="number-input" id="bv-difficultyRating3"></div>
+                            <div class="number-input" id="bv-difficultyRating4"></div>
+                            <div class="number-input" id="bv-difficultyRating5"></div>
+                            <div class="checkbox" id="bv-difficulty-active0"></div>
+                            <div class="checkbox" id="bv-difficulty-active1"></div>
+                            <div class="checkbox" id="bv-difficulty-active2"></div>
+                            <div class="checkbox" id="bv-difficulty-active3"></div>
+                            <div class="checkbox" id="bv-difficulty-active4"></div>
+                            <div class="checkbox" id="bv-difficulty-active5"></div>
                         </div>
                     </div>
                 </div>
