--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                             <div class="text-input" id="bv-charter"></div>
                             <div class="file-input" id="bv-album-art"></div>  
                             <div class="file-input" id="bv-audio-clips"></div>
-                            <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
                         </div>
 
                         <div class="category">
@@ -122,40 +121,33 @@
                     </div>
                 </div>
                 <div class="bv bv1 disabled">
-                    <div id="bv-diffs">
-                        <div class="category active">
-                            <div style="font-size:1.75rem; font-weight:bold"> Difficulties </div>
-                            <div>
-                                <span class="checkbox" id="bv-difficulty-active0"></span>
-                                <span class="diff-name"> Easy: </span>
-                                <span class="number-input" id="bv-difficultyRating0"></span>
-                            </div>
-                            <div>
-                                <span class="checkbox" id="bv-difficulty-active1"></span>
-                                <span class="diff-name"> Normal: </span>
-                                <span class="number-input" id="bv-difficultyRating1"></span>
-                            </div>
-                            <div>
-                                <span class="checkbox" id="bv-difficulty-active2"></span>
-                                <span class="diff-name"> Hard: </span>
-                                <span class="number-input" id="bv-difficultyRating2"></span>
-                            </div>
-                            <div>
-                                <span class="checkbox" id="bv-difficulty-active3"></span>
-                                <span class="diff-name"> Expert: </span>
-                                <span class="number-input" id="bv-difficultyRating3"></span>
-                            </div>
-                            <div>
-                                <span class="checkbox" id="bv-difficulty-active4"></span>
-                                <span class="diff-name"> XD: </span>
-                                <span class="number-input" id="bv-difficultyRating4"></span>
-                            </div>
-                            <div>
-                                <span class="checkbox" id="bv-difficulty-active5"></span>
-                                <span class="diff-name"> RemiXD: </span>
-                                <span class="number-input" id="bv-difficultyRating5"></span>
-                            </div>
+                    <div class="category active">
+                        <div class="bv1-title"> Difficulties </div>
+                        <div>
+                            <span class="checkbox" id="bv-difficulty-active0"></span>
+                            <span class="number-input" id="bv-difficultyRating0"></span>
                         </div>
+                        <div>
+                            <span class="checkbox" id="bv-difficulty-active1"></span>
+                            <span class="number-input" id="bv-difficultyRating1"></span>
+                        </div>
+                        <div>
+                            <span class="checkbox" id="bv-difficulty-active2"></span>
+                            <span class="number-input" id="bv-difficultyRating2"></span>
+                        </div>
+                        <div>
+                            <span class="checkbox" id="bv-difficulty-active3"></span>
+                            <span class="number-input" id="bv-difficultyRating3"></span>
+                        </div>
+                        <div>
+                            <span class="checkbox" id="bv-difficulty-active4"></span>
+                            <span class="number-input" id="bv-difficultyRating4"></span>
+                        </div>
+                        <div>
+                            <span class="checkbox" id="bv-difficulty-active5"></span>
+                            <span class="number-input" id="bv-difficultyRating5"></span>
+                        </div>
+                        <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
                     </div>
                 </div>
 
