fix borked html, iterate version number

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="bv bv1 disabled">
-                    <div class="category active">
+                    <div class="category active" id="bv-diffs">
                         <div class="bv1-title"> Difficulties </div>
                         <div>
                             <span class="checkbox" id="bv-difficulty-active0"></span>
@@ -188,7 +188,7 @@
         </span>
 
         <span class="bb bb1">
-            <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.6.4</a>
+            <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.6.5</a>
             <span>&#8226;</span>
             <span>Up to date with SRXD v1.5.1</span>
         </span>
