Adjust styling in basic view

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
                             <span class="checkbox" id="bv-difficulty-active5"></span>
                             <span class="number-input" id="bv-difficultyRating5"></span>
                         </div>
+                    </div>
+                    <div class="category active">
                         <div class="checkbox" id="bv-allowCustomLeaderboardCreation"></div>
                     </div>
                 </div>
