add ui for importing lyrics

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                             <div class="text-input" id="bv-charter"></div>
                             <div class="file-input" id="bv-album-art"></div>  
                             <div class="file-input" id="bv-audio-clips"></div>
+                            <div class="file-input" id="bv-import-lyrics"></div>
                         </div>
 
                         <div class="category">
