too many things in 1 commit ._.
created backend-utils.js
changed small-scale loads to use callbacks instead of repetitive hardcoded functions
added buttons to replace any difficulty with a new chart's

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script defer type="text/javascript" src="scripts/audio-clips.js"></script>
     <script defer type="text/javascript" src="scripts/diagnostics.js"></script>
     <script defer type="text/javascript" src="scripts/charter-utils.js"></script>
+    <script defer type="text/javascript" src="scripts/backend-utils.js"></script>
 
     <!-- - - - COMPONENTS - - - - - - -->
     <!-- button -->     <link rel="stylesheet" type="text/css" href="components/button/button.css">
@@ -186,6 +187,7 @@
                                 title="Replace the lyrics in the loaded chart with lyrics from a new one."></button>
                     </div>
                     <input type="file" accept=".srtb, .json, .zip" id="dv-lyric-input">
+                    <input type="file" accept=".srtb, .json, .zip" id="dv-difficulty-input">
                     <div id="dv-root" class="dv-root"></div>
                 </div>
             </div>
