--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="styles/json-view.css">
     <link rel="stylesheet" type="text/css" href="styles/bottom-bar.css">
     <link rel="stylesheet" type="text/css" href="styles/diagnostics-view.css">
+    <link rel="stylesheet" type="text/css" href="styles/popup.css">
 
     <!-- - - - MAIN SCRIPTS - - - - - -->
     <script defer type="text/javascript" src="scripts/main.js"></script>
@@ -39,6 +40,7 @@
     <script defer type="text/javascript" src="scripts/diagnostics.js"></script>
     <script defer type="text/javascript" src="scripts/charter-utils.js"></script>
     <script defer type="text/javascript" src="scripts/backend-utils.js"></script>
+    <script defer type="text/javascript" src="scripts/popup.js"></script>
 
     <!-- - - - COMPONENTS - - - - - - -->
     <!-- button -->     <link rel="stylesheet" type="text/css" href="components/button/button.css">
@@ -187,6 +189,8 @@
                                 title="Replace the lyrics in the loaded chart with lyrics from a new one."></button>
                         <button class="button" id="dv-set-serialization"
                                 title="Migrate all note data to the newest serialization format."></button>
+                        <button class="button" id="popup"
+                                title="Create a sample popup."></button>
                     </div>
                     <input type="file" accept=".srtb, .json, .zip" id="dv-lyric-input">
                     <input type="file" accept=".srtb, .json, .zip" id="dv-difficulty-input">
@@ -214,6 +218,13 @@
     <div id="loading-screen" class="active">
         <span class="loading-icon"></span>
         <span id="loading-message"></span>
+    </div>
+    <div id="popup-background">
+        <span class="popup-container">
+            <span id="popup-title"></span>
+            <span id="popup-content"></span>
+            <span id="popup-options"></span>
+        </span>
     </div>
 </body>
 </html>
