implement toasts where applicable

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <button class="button" id="dv-set-serialization"
                                 title="Migrate all note data to the newest serialization format."></button>
                         <button class="button"
-                                onclick="createToast('Toast!', 'you pressed the toast button!', 'success', 5000)">toast</button>
+                                onclick="createToast('Toast!', 'you pressed the toast button!', 'success', 50000)">Toast!</button>
                     </div>
                     <input type="file" accept=".srtb, .json, .zip" id="dv-lyric-input">
                     <input type="file" accept=".srtb, .json, .zip" id="dv-difficulty-input">
