functional popup with multiple buttons

--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
             <span id="popup-title"></span>
             <span id="popup-content"></span>
             <span id="popup-options"></span>
+            <input id="popup-result"></input>
+            <span id="popup-remember">
+                <label>Remember this decision</label>
+                <input type="checkbox" id="popup-remember"></input>
+            </span>
         </span>
     </div>
 </body>
