"remember this decision" implemented

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <input id="popup-result"></input>
             <span id="popup-remember">
                 <label>Remember this decision</label>
-                <input type="checkbox" id="popup-remember"></input>
+                <input type="checkbox" id="popup-checkbox"></input>
             </span>
         </span>
     </div>
