--- a/index.html
+++ b/index.html
@@ -191,9 +191,14 @@
                                 title="Replace the lyrics in the loaded chart with lyrics from a new one."></button>
                         <button class="button" id="dv-set-serialization"
                                 title="Migrate all note data to the newest serialization format."></button>
+                        <button class="button" id="dv-import"
+                                title="Merge data from another chart into this one."></button>
+                        <button class="button" id="roll"
+                                title="!roll"></button>
                     </div>
                     <input type="file" accept=".srtb, .json, .zip" id="dv-lyric-input">
                     <input type="file" accept=".srtb, .json, .zip" id="dv-difficulty-input">
+                    <input type="file" accept=".srtb, .json, .zip" id="dv-merge-input">
                     <div id="dv-root" class="dv-root"></div>
                 </div>
             </div>
