--- a/index.html
+++ b/index.html
@@ -222,10 +222,23 @@
         <span class="loading-icon"></span>
         <span id="loading-message"></span>
     </div>
-    <div id="toast-container">
-    </div>
+    <div id="toast-container"></div>
     <div id="popup-background">
-        <span id="popup-container"></span>
+        <div id="popup-container"></div>
+        <div id="popup-merge-container">
+            <span id="merge-instruction"></span>
+            <span>
+                <span id="merge-title"></span>
+                <span id="merge-subtitle"></span>
+            </span>
+            <span id="merge-checkbox-container">
+                <!-- checkboxes generated programmatically -->
+            </span>
+            <span>
+                <button id="merge-confirm" class="popup-button">Confirm</button>
+                <button id="merge-cancel" class="popup-button">Cancel</button>
+            </span>
+        </div>
         <span id="popup-result"></span>
     </div>
 </body>
