--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <script defer type="text/javascript" src="components/checkbox/checkbox.js"></script>
     <!-- file input --> <link rel="stylesheet" type="text/css" href="components/file-input/file-input.css">
                         <script defer type="text/javascript" src="components/file-input/file-input.js"></script>
-    <!-- file input --> <link rel="stylesheet" type="text/css" href="components/select-input/select-input.css">
+    <!-- selection -->  <link rel="stylesheet" type="text/css" href="components/select-input/select-input.css">
                         <script defer type="text/javascript" src="components/select-input/select-input.js"></script>
 
     <script defer type="text/javascript" src="scripts/init.js"></script>
