misc stashed format changes

--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                 <span id="merge-title"></span>
                 <span id="merge-subtitle"></span>
             </span>
-            <span id="merge-checkbox-container">
+            <div id="merge-checkbox-container">
                 <!-- checkboxes generated programmatically -->
-            </span>
+            </div>
             <span>
                 <button id="merge-confirm" class="popup-button">Confirm</button>
                 <button id="merge-cancel" class="popup-button">Cancel</button>
