--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div id="merge-checkbox-container">
                 <!-- checkboxes generated programmatically -->
             </div>
-            <span>
+            <span class="merge-buttons">
                 <button id="merge-confirm" class="popup-button">Confirm</button>
                 <button id="merge-cancel" class="popup-button">Cancel</button>
             </span>
