--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script defer type="text/javascript" src="scripts/album-art.js"></script>
     <script defer type="text/javascript" src="scripts/audio-clips.js"></script>
     <script defer type="text/javascript" src="scripts/diagnostics.js"></script>
+    <script defer type="text/javascript" src="scripts/diagnostics-checker.js"></script>
     <script defer type="text/javascript" src="scripts/charter-utils.js"></script>
     <script defer type="text/javascript" src="scripts/backend-utils.js"></script>
     <script defer type="text/javascript" src="scripts/toast.js"></script>
